confirmed findings for subnetwork of research departments

--- a/Workplace/scripts/w_contact.ipynb
+++ b/Workplace/scripts/w_contact.ipynb
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 471,
    "metadata": {},
    "outputs": [
     {
@@ -977,14 +977,14 @@
        " 'SRH': [27, 106, 60, 141, 2576]}"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "departments = department[1].unique() # unique departments\n",
-    "inter_dept_interactions = {} # dict\n",
+    "dept_interactions = {} # dict\n",
     "\n",
     "for i in range(len(departments)):\n",
     "    dept1 = departments[i]\n",
@@ -995,10 +995,277 @@
     "        # print(\"dept2: {}\".format(dept2))\n",
     "        dept_contacts.append(num_contacts(dept1, dept2, contacts, \"p1 department\", \"p2 department\"))\n",
     "        # print(dept_contacts)\n",
-    "    inter_dept_interactions[dept1] = dept_contacts\n",
+    "    dept_interactions[dept1] = dept_contacts\n",
     "    \n",
-    "inter_dept_interactions"
+    "dept_interactions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DISQ</th>\n",
+       "      <th>DSE</th>\n",
+       "      <th>SFLE</th>\n",
+       "      <th>DMCT</th>\n",
+       "      <th>SRH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DISQ</th>\n",
+       "      <td>1194</td>\n",
+       "      <td>467</td>\n",
+       "      <td>58</td>\n",
+       "      <td>333</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DMCT</th>\n",
+       "      <td>333</td>\n",
+       "      <td>523</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1435</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DSE</th>\n",
+       "      <td>467</td>\n",
+       "      <td>2820</td>\n",
+       "      <td>30</td>\n",
+       "      <td>523</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SFLE</th>\n",
+       "      <td>58</td>\n",
+       "      <td>30</td>\n",
+       "      <td>36</td>\n",
+       "      <td>21</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SRH</th>\n",
+       "      <td>27</td>\n",
+       "      <td>106</td>\n",
+       "      <td>60</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      DISQ   DSE  SFLE  DMCT   SRH\n",
+       "DISQ  1194   467    58   333    27\n",
+       "DMCT   333   523    21  1435   141\n",
+       "DSE    467  2820    30   523   106\n",
+       "SFLE    58    30    36    21    60\n",
+       "SRH     27   106    60   141  2576"
+      ]
+     },
+     "execution_count": 472,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dept_counts = pd.DataFrame(dept_interactions, index = [\"DISQ\", \"DSE\", \"SFLE\", \"DMCT\", \"SRH\"])\n",
+    "df_dept_counts = df_dept_counts.T\n",
+    "\n",
+    "df_dept_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DISQ': array([ 0.57431457,  0.22462722,  0.02789803,  0.16017316,  0.01298701]),\n",
+       " 'DMCT': array([ 0.13575214,  0.21320832,  0.00856095,  0.58499796,  0.05748064]),\n",
+       " 'DSE': array([ 0.11834769,  0.71464774,  0.00760264,  0.13253928,  0.02686265]),\n",
+       " 'SFLE': array([ 0.28292683,  0.14634146,  0.17560976,  0.10243902,  0.29268293]),\n",
+       " 'SRH': array([ 0.00927835,  0.03642612,  0.02061856,  0.04845361,  0.88522337])}"
+      ]
+     },
+     "execution_count": 475,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dept_ratios = {}\n",
+    "for key in dept_interactions.keys():\n",
+    "    dept_ratios[key] = dept_interactions[key] / np.sum(dept_interactions[key])\n",
+    "\n",
+    "dept_ratios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table of Departmental Interactions**\n",
+    "* rows = departments\n",
+    "* columns = departments that department interacts with  \n",
+    "\n",
+    "Note: Discrepancy between SRH - DISQ vs DISQ - SRH comes from dividing by sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DISQ</th>\n",
+       "      <th>DSE</th>\n",
+       "      <th>SFLE</th>\n",
+       "      <th>DMCT</th>\n",
+       "      <th>SRH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>DISQ</th>\n",
+       "      <td>0.574315</td>\n",
+       "      <td>0.224627</td>\n",
+       "      <td>0.027898</td>\n",
+       "      <td>0.160173</td>\n",
+       "      <td>0.012987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DMCT</th>\n",
+       "      <td>0.135752</td>\n",
+       "      <td>0.213208</td>\n",
+       "      <td>0.008561</td>\n",
+       "      <td>0.584998</td>\n",
+       "      <td>0.057481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DSE</th>\n",
+       "      <td>0.118348</td>\n",
+       "      <td>0.714648</td>\n",
+       "      <td>0.007603</td>\n",
+       "      <td>0.132539</td>\n",
+       "      <td>0.026863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SFLE</th>\n",
+       "      <td>0.282927</td>\n",
+       "      <td>0.146341</td>\n",
+       "      <td>0.175610</td>\n",
+       "      <td>0.102439</td>\n",
+       "      <td>0.292683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SRH</th>\n",
+       "      <td>0.009278</td>\n",
+       "      <td>0.036426</td>\n",
+       "      <td>0.020619</td>\n",
+       "      <td>0.048454</td>\n",
+       "      <td>0.885223</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          DISQ       DSE      SFLE      DMCT       SRH\n",
+       "DISQ  0.574315  0.224627  0.027898  0.160173  0.012987\n",
+       "DMCT  0.135752  0.213208  0.008561  0.584998  0.057481\n",
+       "DSE   0.118348  0.714648  0.007603  0.132539  0.026863\n",
+       "SFLE  0.282927  0.146341  0.175610  0.102439  0.292683\n",
+       "SRH   0.009278  0.036426  0.020619  0.048454  0.885223"
+      ]
+     },
+     "execution_count": 476,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dept = pd.DataFrame(dept_ratios, index = [\"DISQ\", \"DSE\", \"SFLE\", \"DMCT\", \"SRH\"])\n",
+    "df_dept = df_dept.T\n",
+    "\n",
+    "df_dept"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observations**\n",
+    "* DISQ - 57% internal\n",
+    "* DMCT - 58% internal\n",
+    "* DSE - 71% internal\n",
+    "* SFLE - 18% internal\n",
+    "* SRH - 89% internal\n",
+    "\n",
+    "Note: Interactions don't seem to be split by floors. Interactions are heavily influenced by the role of the department. Confirms finding that research groups form a subnetwork of connectedness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Additional Explorations **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
