--- a/Workplace/scripts/multigraph_pickle.ipynb
+++ b/Workplace/scripts/multigraph_pickle.ipynb
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Graph Characteristics </h3> <br>\n",
+    "<h3> MultiGraph Characteristics </h3> <br>\n",
     "networkx graph: <b>contacts_multigraph</b> <br>\n",
     "* type - MultiGraph (multiple edges between nodes)\n",
     "* nodes - labeled by id\n",
@@ -304,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# adds department attribute to nodes\n",
