--- a/Microfinance/scripts/village1_networks.ipynb
+++ b/Microfinance/scripts/village1_networks.ipynb
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1186,7 +1186,9 @@
     "pickle.dump(M_graph, open(\"../pickles/v1_M.pickle\", \"wb\"))\n",
     "pickle.dump(ESW_graph, open(\"../pickles/v1_ESW.pickle\", \"wb\"))\n",
     "pickle.dump(R_graph, open(\"../pickles/v1_R.pickle\", \"wb\"))\n",
-    "pickle.dump(TC_graph, open(\"../pickles/v1_KORG.pickle\", \"wb\"))"
+    "pickle.dump(TC_graph, open(\"../pickles/v1_TC.pickle\", \"wb\"))\n",
+    "pickle.dump(IOH_graph, open(\"../pickles/v1_IOH.pickle\", \"wb\"))\n",
+    "pickle.dump(VAH_graph, open(\"../pickles/v1_VAH.pickle\", \"wb\"))"
    ]
   },
   {
@@ -1470,27 +1472,28 @@
     }
    ],
    "source": [
-    "v1_people[v1_people[\"village\"] == 1].shape"
+    "v1_people = v1_people[v1_people[\"village\"] == 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "843"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'v1_people' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-8cc8c9e0ec5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv1_people\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../pickles/v1_ind_characteristics\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'v1_people' is not defined"
+     ]
     }
    ],
    "source": [
-    "len(BM_graph.node)"
+    "pickle.dump(v1_people, open(\"../pickles/v1_ind_characteristics\", \"wb\"))"
    ]
   },
   {
